# QT

3D_Laser_Triangulation_QML/: CMakeLists.txt  cameraworker.cpp  cameraworker.h  frameprovider.cpp  frameprovider.h  imageprovider.cpp  imageprovider.h  main.cpp
3D_Laser_Triangulation_QML/qml/: Main.qml
BarcodeReader/: BarcodeReader.pro  mainwindow.cpp  mainwindow.h  soros.cpp  soros.h  yun.cpp  yun.h
BarcodeReaderExample1/: BarcodeReaderExample1.pro  barcodedecoder.cpp  barcodedecoder.h  mainwindow.cpp  mainwindow.h
BarcodeReaderZbar/: BarcodeReader.pro  gallo.cpp  gallo.h  mainwindow.cpp  mainwindow.h
BasicQt/: BasicQt.pro  dialogexample1.cpp  dialogexample1.h  dialogexample1.ui  main.cpp  mainwindow.cpp  mainwindow.ui  readDialog  readMain.me  readYourAge.me  yourage.cpp  yourage.h  yourage.ui
Connect/: Connect.pro  main.cpp
DetailSignalAndSlot/: DetailSignalAndSlot.pro  Readme  dialog.cpp  dialog.h  dialog.ui  gotocelldialog.cpp  gotocelldialog.h  main.cpp
DinamicDialog/: DinamicDialog.pro  readme.md
ExportingSVG/: ExportingSVG.pro
GridView/: main.qml
Modifier/: main.cpp
OCRExample/: OCRExample.pro  mainwindow.cpp  mainwindow.h  ocr.cpp  ocr.h  rapidfuzz.h
OCR_PreProcessing/: OCR_PreProcessing.pro  imgpreprocessing.cpp  imgpreprocessing.h  mainwindow.cpp  mainwindow.h  objectDetection.cpp
PrimaryScreen_example/: main.cpp  mainwindow.ui
PropertyAnimation/: PropertyAnimation.pro  Read.me  animation.cpp  animation.h  animation.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multianimation.cpp  multianimation.h  multianimation.ui  statemachine.cpp  statemachine.h  statemachine.ui  timer.cpp  timer.h  timer.ui  timer2.cpp  timer2.h  timer2.ui
QCR_Final/: QCR_Final.pro  decode.cpp  decode.h  mainwindow.cpp  mainwindow.h  ocrprocessing.cpp  ocrprocessing.h
QPainter_2DGraphics/: Pictures  QPainter_2DGraphics.pro  drawing.cpp  drawing.h  drawing.ui  (+5 more)
(+65 files in other folders)
